# openpsg-serial

./: Cargo.toml  README.md
go/: go.mod  psgserial.go  psgserial_test.go
go/psgserial/: go.mod  go.sum  psgserial.go  psgserial_test.go
src/: lib.rs
ts/: .gitignore  .npmignore  package-lock.json  package.json
ts/src/: index.test.ts  index.ts
