[package]
name = "psgserial"
version = "0.3.1"
edition = "2024"
license = "MPL-2.0"
description = "OpenPSG single wire serial protocol"

[dependencies]
bitflags = "2.9.0"
crc = "3.2"
heapless = "0.8"
defmt = { version = "0.3", optional = true }

[features]
default = []
defmt = ["dep:defmt", "heapless/defmt-03"]
